--- a/html/logros.html
+++ b/html/logros.html
@@ -44,6 +44,7 @@
 
     <footer data-lena-footer></footer>
     <script src="../js/feedbackSystem.js" defer></script>
+    <script src="../js/i18n.js" defer></script>
     <script src="../js/appShell.js" defer></script>
     <script src="../js/avatarData.js"></script>
     <script src="../js/core/storage.js"></script>
@@ -65,3 +66,5 @@
 </script>
 </body>
 </html>
+
+
