--- a/html/boutique.html
+++ b/html/boutique.html
@@ -85,6 +85,7 @@
 
     <script src="../js/audioManager.js"></script>
     <script src="../js/feedbackSystem.js" defer></script>
+    <script src="../js/i18n.js" defer></script>
     <script src="../js/appShell.js" defer></script>
     <script src="../js/avatarData.js"></script>
     <script src="../js/core/storage.js"></script>
@@ -108,3 +109,5 @@
 </script>
 </body>
 </html>
+
+
