--- a/html/juego.html
+++ b/html/juego.html
@@ -66,7 +66,7 @@
       }
     })();
     </script>
-    <title>App de Léna - Monde Magique</title>
+    <title>App de LAcna - Monde Magique</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/feedback-system.css"> <!-- New feedback system CSS -->
     <link rel="stylesheet" href="../css/dictee.css">
@@ -190,11 +190,11 @@
     <div id="content">
       <div id="game-shell-root" class="gs-shell" data-game-id="magie-maths">
         <header class="gs-shell__header">
-          <button class="gs-btn-icon" aria-label="Retour" data-action="back">🏠</button>
+          <button class="gs-btn-icon" aria-label="Retour" data-i18n-aria="gameBack" data-action="back">🏠</button>
           <div class="gs-header__title">
-            <span class="gs-chip">🪄 Monde Magique</span>
+            <span class="gs-chip">🪄 <span data-i18n="gameWorld">Monde Magique</span></span>
             <div>
-              <div class="gs-title__text">Niveau <span data-level>1</span> <span data-diff></span></div>
+              <div class="gs-title__text"><span data-i18n="levelLabel">Niveau</span> <span data-level>1</span> <span data-diff></span></div>
               <div class="gs-progress">
                 <div class="gs-progress__bar"></div>
               </div>
@@ -205,18 +205,18 @@
         </header>
         <main class="gs-main">
           <div class="gs-question">
-            <div class="gs-question__label" data-question>Pret a jouer</div>
+            <div class="gs-question__label" data-question data-i18n="gameReady">Pret a jouer</div>
             <p class="gs-hint" data-hint hidden></p>
           </div>
           <div class="gs-options" data-options></div>
           <div class="gs-order" data-order-area hidden></div>
         </main>
         <footer class="gs-footer">
-          <button class="gs-action gs-action--ghost" data-action="hint" hidden>💡 Hint</button>
-          <button class="gs-action" data-action="start">▶️ Start</button>
-          <button class="gs-action" data-action="validate" disabled>✅ Valider</button>
-          <button class="gs-action" data-action="next" disabled>⏭️ Suite</button>
-          <button class="gs-action gs-action--ghost" data-action="calm">🌙 Calme</button>
+          <button class="gs-action gs-action--ghost" data-action="hint" data-i18n="gameHint" hidden>💡 Hint</button>
+          <button class="gs-action" data-action="start" data-i18n="gameStart">▶️ Start</button>
+          <button class="gs-action" data-action="validate" data-i18n="gameValidate" disabled>✅ Valider</button>
+          <button class="gs-action" data-action="next" data-i18n="gameNext" disabled>⏭️ Suite</button>
+          <button class="gs-action gs-action--ghost" data-action="calm" data-i18n="gameCalm">🌙 Calme</button>
         </footer>
         <div class="gs-feedback" hidden>
           <div class="gs-feedback__card">
@@ -226,7 +226,7 @@
               <span data-feedback-stars></span>
             </div>
             <div data-feedback-summary></div>
-            <button class="gs-action" data-action="next">▶️ Suite</button>
+            <button class="gs-action" data-action="next" data-i18n="gameNext">▶️ Suite</button>
           </div>
         </div>
       </div>
@@ -236,17 +236,17 @@
   <div id="shopModal" class="shop-modal" aria-hidden="true">
     <div class="shop-modal__dialog" role="dialog" aria-modal="true" aria-labelledby="shopModalTitle">
       <div class="shop-modal__header">
-        <h2 id="shopModalTitle">Boutique de récompenses</h2>
-        <button id="shopClose" class="shop-modal__close" aria-label="Fermer la boutique">×</button>
+        <h2 id="shopModalTitle" data-i18n="shopTitle">Boutique de récompenses</h2>
+        <button id="shopClose" class="shop-modal__close" aria-label="Fermer la boutique" data-i18n-aria="shopClose">×</button>
       </div>
-      <p class="shop-modal__subtitle">Échange tes pièces contre des cadeaux magiques ✨</p>
+      <p class="shop-modal__subtitle" data-i18n="shopSubtitle">Échange tes pièces contre des cadeaux magiques ✨</p>
       <div class="shop-modal__content">
         <section class="shop-section" aria-label="Articles disponibles">
-          <h3>Articles disponibles</h3>
+          <h3 data-i18n="shopAvailable">Articles disponibles</h3>
           <ul id="shopList" class="shop-list"></ul>
         </section>
         <section class="shop-section" aria-label="Mes trésors">
-          <h3>Mes trésors</h3>
+          <h3 data-i18n="shopInventory">Mes trAcsors</h3>
           <ul id="inventoryList" class="shop-inventory"></ul>
         </section>
       </div>
@@ -276,6 +276,7 @@
     <script src="../js/ecriture-cursive.js"></script>
   <script src="../js/abaque-magique.js"></script>
   <script src="../js/audioManager.js"></script>
+  <script src="../js/i18n.js" defer></script>
   <script src="../js/feedbackSystem.js" defer></script>  <script src="../js/appShell.js" defer></script>
   <script src="../js/mcqEngine.js"></script>
   <script src="../js/avatarData.js"></script>
@@ -289,6 +290,7 @@
   <script type="module" src="../js/game-shell/tests.js"></script>
   <script>
   (function(){
+    const translate = (key, fallback) => (window.i18n?.t ? window.i18n.t(key) : fallback);
     const sectionsData = [
       {
         title: 'Mathématiques', emoji: 0x1F9EE, color: '#4A90E2',
@@ -500,3 +502,12 @@ document.addEventListener('mousemove', (e) => {
 </script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
